[gd_scene load_steps=3 format=3 uid="uid://cjbex5y7ml0u5"]

[ext_resource type="LabelSettings" uid="uid://dq556b1pcj4o5" path="res://assets/LABEL_S48_RED.tres" id="1_dn7ng"]
[ext_resource type="Script" path="res://assets/game_over/game_over.gd" id="1_iqdyj"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqdyj")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -26.0
offset_right = 120.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_dn7ng")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -26.0
offset_right = 120.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "TAP TO CONTINUE"
label_settings = ExtResource("1_dn7ng")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
